# anytime-self-consistency

./: .gitignore  Makefile  NEXT_STEP_REPORT.md  README.md  colab_run.py  fleet_launcher.sh  fleet_manager.sh  fleet_worker.sh  pyproject.toml  requirements.txt
configs/: arc_challenge_smoke.yaml  gsm8k_full.yaml  gsm8k_medium.yaml  gsm8k_small.yaml  gsm8k_smoke.yaml  humaneval_smoke.yaml  mbpp_smoke.yaml  mmlu_smoke.yaml  paper_hard_math.yaml  paper_hero.yaml  paper_hero_global.yaml  paper_hero_sharded.yaml  paper_hero_suite.yaml  paper_model_agnostic.yaml  paper_model_agnostic_llama.yaml  paper_model_agnostic_qwen.yaml  suite_budget.yaml  suite_budget_a100.yaml  suite_overnight.yaml  suite_paper.yaml  suite_repair_global.yaml  suite_smoke.yaml  suite_smoke_full.yaml
prompts/: gsm8k_cot_long.txt  gsm8k_decompose.txt  gsm8k_direct.txt
scripts/: ablation_table.py  aggregate_results.py  analyze_stopping_bounds.py  benchmark_latency.py  clean_outputs.py  diagnose_sampling.py  error_analysis.py  fleet_slot.sh  global_smoke_test.sh  launch_fleet.sh  launch_single_h200.sh  pareto_dominance.py  plot_confidence_trajectory.py  plot_global_curve.py  plot_pareto.py  quick_analyze.py  regression_greedy.py  run_h200_3h_test.sh  run_hero_5seed.sh  run_suite.py  significance_tests.py  slurm_submit.sh  smoke_test.sh  suite_sanity.sh  tune_ucb_c.py  vast_setup.sh
src/: anytime.py  baselines.py  data.py  global_anytime.py  models.py  policies.py  profiler.py  run_eval.py  scoring.py  utils.py
